@startuml classDiagram

class User {
    #String userId
    #String name
    #String email
    #String phoneNumber
    #String password
    #String role
    +authenticate(String): String[]
    +getUserInfo(): String
}

class Member {
    -double balance
    +viewProfile():void
    {static} +searchBook(ArrayList<Book>): void
    +viewBorrowedBooks(ArrayList<Transaction>):void
    +registerMember(): void
    +addFine(double): void
    +borrowBook(ArrayList<Book>) : void
    +returnBook(ArrayList<Book>) : void
    +payFine(double) : void
}

class Administrator {
    +viewInventory():void
    +viewUsers():void
    +addBook(ArrayList<Book>):void
    +editBook(ArrayList<Book>):void
    +deleteBook(ArrayList<Book):void
    +viewTransaction():void
}

User <|-- Member
User <|-- Administrator

class Book {
    -String ISBN
    -String title
    -String author
    -String genre
    -Integer publicationYear
    -boolean isAvailable
    +getBookInfo(): String
    +borrowed(): void
    +returned(): void
}

class Transaction {
    -String transactionId
    -Member member
    -Book book
    -LocalDate borrowedDate
    -LocalDate dueDate
    -LocalDate returnDate
    -String transactionStatus
    +getTransaction(): String
    +borrowBook(): void
    +returnBook(): void
    +overdueDays(): long
    +gatTransactionHistory(LocalDate, LocalDate, LocalDate, String): void
}

class DigitalLibrary {
    +ArrayList<User>  users
    +ArrayList<Book> books 
    +ArrayList<Transaction> transactions 
    +User currentUser    
}

DigitalLibrary "1" *-- "*" Book : manages
DigitalLibrary "1" *-- "*" User : manages
DigitalLibrary "1" *-- "*" Transaction : tracks

Transaction "1" o-- "1" Book : involves
Transaction "1" o-- "1" Member : involves

@enduml